--- a/references.html
+++ b/references.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="./great-style/great_style.css">
+<script src="./glitter-cursor/glitter.js"></script>
 
 <h1>Resources to learn Git</h1>
 
